FlushIt/FlushIt/app/src/main/java/com/example/flushit/errors/InvalidPasswordError.kt
package com.example.flushit.errors

class InvalidPasswordError : CustomError() {
    override var message: String = "Fel lösenord"

    override fun displayError() = message

}